[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Scenes/Messenger.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Scripts/Player.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 30.0
height = 110.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 30.0
height = 10.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 30.0
height = 60.0

[sub_resource type="CapsuleShape2D" id=4]
radius = 30.0
height = 70.0

[node name="Player" type="Area2D"]
collision_layer = 3
collision_mask = 0
script = ExtResource( 2 )
speed = 180

[node name="StandingCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, -85 )
shape = SubResource( 1 )
disabled = true

[node name="FallenCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, -30 )
shape = SubResource( 2 )
disabled = true

[node name="JumpingCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, -110 )
shape = SubResource( 3 )
disabled = true

[node name="CrouchingCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, -70 )
shape = SubResource( 4 )

[node name="Messenger" parent="." instance=ExtResource( 1 )]
position = Vector2( -120, -220 )
[connection signal="action_complete" from="Messenger" to="." method="update_state"]
